tests/error/08_runtime_division_by_zero.mire
import std

pub fn main: () {
    set x = 10 / 0
}